# clap-mcp

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
clap-mcp/: Cargo.toml  build.rs
clap-mcp-macros/: Cargo.toml
clap-mcp-macros/src/: lib.rs
clap-mcp/macros/: Cargo.toml
clap-mcp/macros/src/: lib.rs
clap-mcp/src/: content.rs  lib.rs
clap-mcp/tests/: config_tests.rs  crash_panic_tests.rs  logging_tests.rs  server_behavior_tests.rs  trybuild.rs
clap-mcp/tests/ui/fail/: missing_output_from.rs  missing_output_from.stderr
clap-mcp/tests/ui/pass/: macro_rules.rs  nested_subcommands.rs  output_from_path.rs  output_one_of.rs  tuple_variant_default_output.rs
examples/: Cargo.toml  README.md  client.rs  derive.rs
examples/servers/: async_sleep.rs  async_sleep_common.rs  async_sleep_shared.rs  capture_stdout.rs  custom_resources_prompts.rs  derive.rs  invalid_executable_server.rs  log_bridge.rs  nested_subcommands.rs  optional_commands_and_args.rs  panic_catch_opt_in.rs  placeholder_server.rs  result_output.rs  stderr_success.rs  struct_subcommand.rs  structured.rs  subcommands.rs  subprocess_exit_handling.rs  tracing_bridge.rs  vec_and_flags.rs
src/: lib.rs  logging.rs
tests/: config_tests.rs  logging_tests.rs
