[workspace]
members = [".", "clap-mcp-macros"]

[workspace.package]
version = "0.0.1-rc.2"

[package]
name = "clap-mcp"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Enrich your CLI with MCP capabilities"
authors = ["canardleteer <canardleteer@gmail.com>"]
repository = "https://github.com/canardleteer/clap-mcp"
documentation = "https://docs.rs/clap-mcp"

[build-dependencies]
chrono = "0.4"

[dependencies]
clap-mcp-macros = { version = "0.0.1-rc.1", path = "clap-mcp-macros" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rust-mcp-sdk = { version = "0.8.3", default-features = false, features = ["server", "client", "stdio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
