[workspace]
members = [".", "clap-mcp-macros"]

[workspace.package]
version = "0.0.1-rc.4"

[package]
name = "clap-mcp"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Enrich your CLI with MCP capabilities"
authors = ["canardleteer <canardleteer@gmail.com>"]
repository = "https://github.com/canardleteer/clap-mcp"
documentation = "https://docs.rs/clap-mcp"

[build-dependencies]
chrono = "0.4"

[features]
default = []
output-schema = ["schemars"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
log = ["dep:log"]

# Server examples (in examples/servers/)
[[example]]
name = "derive"
path = "examples/servers/derive.rs"

[[example]]
name = "structured"
path = "examples/servers/structured.rs"

[[example]]
name = "tracing_bridge"
path = "examples/servers/tracing_bridge.rs"
required-features = ["tracing"]

[[example]]
name = "log_bridge"
path = "examples/servers/log_bridge.rs"
required-features = ["log"]

[[example]]
name = "async_sleep"
path = "examples/servers/async_sleep.rs"
required-features = ["tracing"]

[[example]]
name = "async_sleep_shared"
path = "examples/servers/async_sleep_shared.rs"
required-features = ["tracing"]

# Client example (tests the servers)
[[example]]
name = "client"
required-features = ["tracing"]

[dependencies]
clap-mcp-macros = { version = "0.0.1-rc.3", path = "clap-mcp-macros" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rust-mcp-sdk = { version = "0.8.3", default-features = false, features = ["server", "client", "stdio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Optional dependencies
schemars = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["registry", "fmt"] }
log = { version = "0.4", optional = true }
