[package]
name = "clap-mcp"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Enrich your CLI with MCP capabilities"
authors = ["canardleteer <canardleteer@gmail.com>"]
repository = "https://github.com/canardleteer/clap-mcp"
documentation = "https://docs.rs/clap-mcp"
readme = "../README.md"

[build-dependencies]
chrono = "0.4"

[features]
default = ["derive"]
derive = ["dep:clap-mcp-macros"]
output-schema = ["schemars"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
log = ["dep:log"]

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rust-mcp-sdk = { version = "0.8.3", default-features = false, features = ["server", "client", "stdio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
libc = "0.2"

# Optional dependencies
clap-mcp-macros = { workspace = true, optional = true }
schemars = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["registry", "fmt"] }
log = { version = "0.4", optional = true }

[dev-dependencies]
clap-mcp-macros = { workspace = true }
schemars = "0.8"
