[package]
name = "clap-mcp-macros"
version = "0.0.1-rc.5"
edition = "2024"
license = "MIT"
description = "Procedural macros for clap-mcp"
repository = "https://github.com/canardleteer/clap-mcp"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["parsing", "extra-traits"] }
