[package]
name = "clap-mcp-macros"
version = "0.0.2-rc.1" # not a workspace member, so shouldn't be relevant with release-plz
edition = "2024"
license = "MIT"
description = "Procedural macros for clap-mcp"
repository = "https://github.com/canardleteer/clap-mcp"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["parsing", "extra-traits"] }
